--- a/styles.css
+++ b/styles.css
@@ -1,236 +1,375 @@
-
-/* Add font files for Courier New */
-@font-face {
-  font-family: 'Courier New';
-  src: url('fonts/courier-new.woff2') format('woff2'),
-       url('fonts/courier-new.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-:root {
-  --font-family-courier-new: 'Courier New', sans-serif;
-  --text-white: rgba(255, 255, 255, 0.4);
-  --text-black: rgba(0, 0, 0, 1);
-}
-
-.text-white {
-  color: var(--text-white);
-}
-
-.text-black {
-  color: var(--text-black);
-}
-
-
-/* CSS Reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  width: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-.rectangle-5-2 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  background-color: rgba(188, 188, 188, 0.8);
-}
-
-.text-3 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  font-family: var(--font-family-courier-new);
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 40px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-white);
-}
-
-.rectangle-9-4 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  background-color: rgba(71, 71, 71, 1);
-}
-
-.ellipse-1-5 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  fill: rgba(255, 255, 255, 1);
-  border: none;
-  outline: none;
-}
-
-.line-1-6 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  border: 3px solid rgba(255, 255, 255, 1);
-  border: none;
-  outline: none;
-}
-
-.text-7 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  font-family: var(--font-family-courier-new);
-  font-weight: 700;
-  font-size: 12px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-white);
-}
-
-.text-8 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  font-family: var(--font-family-courier-new);
-  font-weight: 700;
-  font-size: 43px;
-  line-height: 40px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-black);
-}
-
-.rectangle-11-9 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  background-color: rgba(217, 217, 217, 1);
-}
-
-.rectangle-13-10 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  background-color: rgba(217, 217, 217, 1);
-}
-
-.rectangle-12-11 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  background-color: rgba(217, 217, 217, 1);
-}
-
-.text-12 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  font-family: var(--font-family-courier-new);
-  font-weight: 700;
-  font-size: 43px;
-  line-height: 40px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-black);
-  font-family: var(--font-family-courier-new);
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 40px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-black);
-}
-
-.dscf5634-13 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  width: 100%;
-  height: auto;
-}
-
-.text-15 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  font-family: var(--font-family-courier-new);
-  font-weight: 700;
-  font-size: 15px;
-  line-height: 20px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-black);
-}
-
-.frame-6-14 {
+.homepage-desktop {
+  background-color: #fff2f2;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 10px 20px 10px 20px;
-  flex-grow: 0;
-  flex-shrink: 1;
-  width: 19.583333333333332%;
-  background-color: rgba(255, 201, 201, 1);
-  border-radius: 10px;
+  width: 100%;
 }
 
-.text-16 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  font-family: var(--font-family-courier-new);
+.homepage-desktop .div {
+  background-color: #fff2f2;
+  overflow: hidden;
+  width: 1440px;
+  height: 2334px;
+  position: relative;
+}
+
+.homepage-desktop .overlap {
+  position: absolute;
+  width: 1440px;
+  height: 290px;
+  top: 0;
+  left: 0;
+  background-image: url(https://c.animaapp.com/7ppTxyvu/img/rectangle-5.png);
+  background-size: 100% 100%;
+}
+
+.homepage-desktop .text-wrapper {
+  position: absolute;
+  width: 1123px;
+  top: 144px;
+  left: 158px;
+  font-family: "Courier New-Bold", ;
   font-weight: 700;
+  color: #ffffff;
+  font-size: 48px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 40px;
+}
+
+.homepage-desktop .overlap-group {
+  position: absolute;
+  width: 1440px;
+  height: 64px;
+  top: 0;
+  left: 0;
+  background-color: #474747;
+}
+
+.homepage-desktop .ellipse {
+  position: absolute;
+  width: 36px;
+  height: 36px;
+  top: 14px;
+  left: 1379px;
+  background-color: #ffffff;
+  border-radius: 18px;
+}
+
+.homepage-desktop .line {
+  position: absolute;
+  width: 300px;
+  height: 3px;
+  top: 41px;
+  left: 1075px;
+}
+
+.homepage-desktop .text-wrapper-2 {
+  position: absolute;
+  width: 152px;
+  height: 27px;
+  top: 13px;
+  left: 1149px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff66;
+  font-size: 12px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.homepage-desktop .text-wrapper-3 {
+  position: absolute;
+  width: 294px;
+  top: 326px;
+  left: 568px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #000000;
+  font-size: 44px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 40px;
+  white-space: nowrap;
+}
+
+.homepage-desktop .div-wrapper {
+  position: absolute;
+  width: 1440px;
+  height: 388px;
+  top: 1217px;
+  left: 0;
+  background-color: #00000080;
+  background-image: url(https://c.animaapp.com/7ppTxyvu/img/image-7.png);
+  background-size: 100% 100%;
+}
+
+.homepage-desktop .p {
+  position: absolute;
+  width: 1293px;
+  top: 153px;
+  left: 108px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 32px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 40px;
+}
+
+.homepage-desktop .frame-wrapper {
+  position: absolute;
+  width: 1452px;
+  height: 388px;
+  top: 1946px;
+  left: -6px;
+  background-color: #0000004c;
+}
+
+.homepage-desktop .frame {
+  width: 282px;
+  height: 135px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+  position: relative;
+  top: 126px;
+  left: 585px;
+  background-color: #ffc9c9;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.homepage-desktop .text-wrapper-4 {
+  position: relative;
+  width: fit-content;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #000000;
   font-size: 15px;
+  text-align: center;
+  letter-spacing: 0;
   line-height: 20px;
-  text-decoration: none;
-  text-transform: none;
-  color: var(--text-black);
+  white-space: nowrap;
 }
 
-.image-9-17 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  width: 100%;
-  height: auto;
+.homepage-desktop .overlap-2 {
+  position: absolute;
+  width: 1338px;
+  height: 292px;
+  top: 412px;
+  left: 51px;
 }
 
-.img_0707-18 {
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  width: 100%;
-  height: auto;
+.homepage-desktop .group {
+  position: absolute;
+  width: 1338px;
+  height: 292px;
+  top: 0;
+  left: 0;
 }
 
-.node-1 {
-@media (max-width: 1440px) {
-  .node-1 {
-    padding-left: 24px;
-    padding-right: 24px;
-  }
+.homepage-desktop .card {
+  position: absolute;
+  width: 390px;
+  height: 290px;
+  top: 0;
+  left: 0;
+  background-color: #525252;
+  border-radius: 20px;
 }
 
-@media (max-width: 768px) {
-  .node-1 {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
+.homepage-desktop .overlap-group-2 {
+  position: absolute;
+  width: 306px;
+  height: 76px;
+  top: 151px;
+  left: 40px;
 }
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
-  background-color: rgba(255, 243, 243, 1);
+
+.homepage-desktop .text-wrapper-5 {
+  position: absolute;
+  width: 255px;
+  top: 0;
+  left: 36px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 40px;
+}
+
+.homepage-desktop .text-wrapper-6 {
+  position: absolute;
+  width: 306px;
+  top: 36px;
+  left: 0;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 15px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 20px;
+}
+
+.homepage-desktop .frame-2 {
+  width: 126px;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 20px;
+  position: absolute;
+  top: 245px;
+  left: 132px;
+  background-color: #ffc9c9;
+  border-radius: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.homepage-desktop .text-wrapper-7 {
+  position: relative;
+  width: fit-content;
+  margin-top: -1.00px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 15px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 20px;
+  white-space: nowrap;
+}
+
+.homepage-desktop .card-2 {
+  top: 0;
+  left: 485px;
+  position: absolute;
+  width: 390px;
+  height: 290px;
+  background-color: #525252;
+  border-radius: 20px;
+}
+
+.homepage-desktop .overlap-3 {
+  position: absolute;
+  width: 365px;
+  height: 76px;
+  top: 151px;
+  left: 12px;
+}
+
+.homepage-desktop .text-wrapper-8 {
+  position: absolute;
+  width: 237px;
+  top: 0;
+  left: 64px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 40px;
+}
+
+.homepage-desktop .text-wrapper-9 {
+  position: absolute;
+  width: 365px;
+  top: 36px;
+  left: 0;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 15px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 20px;
+}
+
+.homepage-desktop .card-3 {
+  top: 2px;
+  left: 948px;
+  position: absolute;
+  width: 390px;
+  height: 290px;
+  background-color: #525252;
+  border-radius: 20px;
+}
+
+.homepage-desktop .overlap-4 {
+  position: absolute;
+  width: 370px;
+  height: 76px;
+  top: 155px;
+  left: 10px;
+}
+
+.homepage-desktop .text-wrapper-10 {
+  position: absolute;
+  width: 370px;
+  top: 0;
+  left: 0;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 30px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 40px;
+}
+
+.homepage-desktop .text-wrapper-11 {
+  position: absolute;
+  width: 346px;
+  top: 36px;
+  left: 12px;
+  font-family: "Courier New-Bold", ;
+  font-weight: 700;
+  color: #ffffff;
+  font-size: 15px;
+  text-align: center;
+  letter-spacing: 0;
+  line-height: 20px;
+}
+
+.homepage-desktop .image {
+  position: absolute;
+  width: 269px;
+  height: 137px;
+  top: 10px;
+  left: 60px;
+}
+
+.homepage-desktop .img {
+  position: absolute;
+  width: 259px;
+  height: 135px;
+  top: 10px;
+  left: 550px;
+  object-fit: cover;
+}
+
+.homepage-desktop .image-2 {
+  position: absolute;
+  width: 274px;
+  height: 147px;
+  top: 12px;
+  left: 1006px;
+  object-fit: cover;
+}
+image.jpeg {
+  float: left;
+  height: 300px;
+  width: 300px;
+  font-family: Veranda;
+}
+.center {
+  float:center;
 }
