--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   overflow: hidden;
   width: 1440px;
   height: 1334px;
-  position: absolute;
+  position: center;
 }
 
 .homepage-desktop .overlap {
