--- a/style.css
+++ b/style.css
@@ -4,7 +4,13 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  
+}
+    .center {
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
 .homepage-desktop .div {
   background-color: #fff2f2;
   overflow: hidden;
@@ -14,7 +20,7 @@
 }
 
 .homepage-desktop .overlap {
-  position: absolute;
+  position: relative;
   width: 1440px;
   height: 290px;
   top: 0;
